force-app/main/default/objects/OpportunityPayment__c/OpportunityPayment__c.object-meta.xml
<CustomObject>
    <label>Opportunity Payment</label>
    <nameField>
        <label>Opportunity Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>