force-app/main/default/objects/OpportunityPayment__c/fields/IsMasterData__c.field-meta.xml
<CustomField>
    <fullName>IsMasterData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>เพื่อบอกว่า Record นี้ เป็นค่าตั้งต้นใน Opportunity Payment</description>
    <label>Is Master Data</label>
    <type>Checkbox</type>
</CustomField>