force-app/main/default/objects/OpportunityPayment__c/fields/MasterDueDate__c.field-meta.xml
<CustomField>
    <fullName>MasterDueDate__c</fullName>
    <formula>&quot;On the &quot; &amp; TEXT( PaymentTermMaster__r.DueDate__c ) &amp; &quot;th of Every Month&quot;</formula>
    <label>Master Due Date</label>
    <type>Text</type>
</CustomField>