force-app/main/default/objects/OpportunityPayment__c/fields/NoofInstallment__c.field-meta.xml
<CustomField>
    <fullName>NoofInstallment__c</fullName>
    <formula>PaymentTermMaster__r.NoofInstallment__c</formula>
    <label>No. of Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>