force-app/main/default/objects/OpportunityPayment__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <formula>IF(
  Remaining__c == 0,
  &quot;Fully Paid&quot;,
  IF(
    AND(DueDate__c &lt; TODAY(), ISBLANK(ReceivedAmount__c)),
    &quot;Overdue&quot;,
    IF(
      ReceivedAmount__c &gt; 0,
      &quot;Partially Paid&quot;,
      &quot;&quot;
    )
  )
)</formula>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>