force-app/main/default/objects/OpportunityPayment__c/fields/PaymentTermMaster__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term Master Name</label>
    <referenceTo>PaymentTermMaster__c</referenceTo>
    <relationshipLabel>Opportunity Payments</relationshipLabel>
    <relationshipName>Opportunity_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>