force-app/main/default/objects/OpportunityPayment__c/fields/Remaining__c.field-meta.xml
<CustomField>
    <fullName>Remaining__c</fullName>
    <formula>if(ISNULL(ReceivedAmount__c),
   Amount__c ,
   Amount__c -  ReceivedAmount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>