force-app/main/default/objects/OpportunityPayment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Text( PaymentTermMaster__r.Type__c )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>