force-app/main/default/objects/OpportunityPayment__c/fields/UnitName__c.field-meta.xml
<CustomField>
    <fullName>UnitName__c</fullName>
    <label>Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>