force-app/main/default/objects/OpportunityPayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>ProjectName__c</columns>
    <columns>UnitName__c</columns>
    <columns>Term__c</columns>
    <columns>DueDate__c</columns>
    <columns>Amount__c</columns>
    <columns>Remaining__c</columns>
    <columns>PaymentStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>